# QtDiplom

./: CMakeLists.txt  README.md  database.cpp  database.h  dialog.cpp  dialog.h  dialog.ui  graphic.cpp  graphic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
